--- a/src/views/page/LoginPage.html
+++ b/src/views/page/LoginPage.html
@@ -72,19 +72,19 @@
         </div>
         <div class="input-group">
           <span class="input-group-addon"><i class="fa fa-user"></i></span>
-          <input type="text" class="form-control" placeholder="Username"  autofocus>
+          <input type="text" class="form-control" placeholder="Username"  id="Username" autofocus>
 
         </div>
         <div class="input-group">
           <span class="input-group-addon"><i class="fa fa-key"></i></span>
-          <input type="password" class="form-control"  placeholder="Password" >
+          <input type="password" class="form-control"  placeholder="Password" id="Password">
 
         </div>
         <label class="checkbox">
           <input type="checkbox" value="remember-me"> Remember me
           <span class="pull-right"> <a href="#"> Forgot Password?</a></span>
         </label>
-        <button  class="btn btn-primary btn-lg btn-block" >Login</button>
+        <button  class="btn btn-primary btn-lg btn-block" onclick="login_click()">Login</button>
         <a href="createaccount" class="btn btn-info btn-lg btn-block" >Signup</a>
       </div>
     </form>
