--- a/src/views/page/ProfilePage.html
+++ b/src/views/page/ProfilePage.html
@@ -120,9 +120,9 @@
                 </li>
                 <li>
                   <form action="/logout" method="POST">
-                    <button href="#"><i class="icon_key_alt"  type="submit"></i> Log Out</button>
+                    <button href="#"><i class="icon_key_alt" type="submit"></i> Log Out</button>
                   </form>
-                  
+
                 </li>
 
               </ul>
@@ -217,21 +217,19 @@
                   <div class="profile-widget profile-widget-info">
                     <div class="panel-body">
                       <div class="col-lg-2 col-sm-2">
-                        <h4>Jenifer Smith</h4>
+                        <h4><%= profile_name %></h4>
                         <div class="follow-ava">
                           <img src="img/profile-widget-avatar.jpg" alt="">
                         </div>
-                        <h6>Administrator</h6>
+
                       </div>
                       <div class="col-lg-4 col-sm-4 follow-info">
-                        <p>Hello I’m Jenifer Smith, a leading expert in interactive and creative design.</p>
-                        <p>@jenifersmith</p>
-                        <p><i class="fa fa-twitter">jenifertweet</i></p>
-                        <h6>
-                                    <span><i class="icon_clock_alt"></i>11:05 AM</span>
-                                    <span><i class="icon_calendar"></i>25.10.13</span>
-                                    <span><i class="icon_pin_alt"></i>NY</span>
-                                </h6>
+                        <p>
+                          <%= profile_desc %>
+                        </p>
+                        <p>
+                          <%= user_email %>
+                        </p>
                       </div>
                       <div class="col-lg-2 col-sm-6 follow-info weather-category">
                         <ul>
@@ -357,165 +355,87 @@
                                       </form>
                                     </div>
                                   </div>
-                                  <div class="widget-foot">
-                                    <!-- Footer goes here -->
+
+                                </div>
+                              </div>
+                            </div>
+                            <% for(var i= 0; i < posts.length ; i++) {%>
+                              <div class="act-time">
+                                <div class="activity-body act-in">
+                                  <span class="arrow"></span>
+                                  <div class="text">
+                                    <a href="#" class="activity-img"><img class="avatar" src="img/chat-avatar.jpg" alt=""></a>
+                                    <p class="attribution">
+                                      <a href="#">
+                                        <%= profile_name %>
+                                      </a>
+                                    </p>
+                                    <p>
+                                      <%= posts[i].content %>
+                                    </p>
                                   </div>
                                 </div>
                               </div>
-                            </div>
-                            <div class="act-time">
-                              <div class="activity-body act-in">
-                                <span class="arrow"></span>
-                                <div class="text">
-                                  <a href="#" class="activity-img"><img class="avatar" src="img/chat-avatar.jpg" alt=""></a>
-                                  <p class="attribution"><a href="#">Jonatanh Doe</a> at 4:25pm, 30th Octmber 2014</p>
-                                  <p>It is a long established fact that a reader will be distracted layout</p>
+                              <% } %>
+                                <div class="act-time">
+                                  <div class="activity-body act-in">
+                                    <span class="arrow"></span>
+                                    <div class="text">
+                                      <a href="#" class="activity-img"><img class="avatar" src="img/chat-avatar.jpg" alt=""></a>
+                                      <p class="attribution"><a href="#">Jhon Loves </a> at 5:25am, 30th Octmber 2014</p>
+                                      <p>Knowledge speaks, but wisdom listens.</p>
+                                    </div>
+                                  </div>
                                 </div>
-                              </div>
-                            </div>
-                            <div class="act-time">
-                              <div class="activity-body act-in">
-                                <span class="arrow"></span>
-                                <div class="text">
-                                  <a href="#" class="activity-img"><img class="avatar" src="img/chat-avatar.jpg" alt=""></a>
-                                  <p class="attribution"><a href="#">Jhon Loves </a> at 5:25am, 30th Octmber 2014</p>
-                                  <p>Knowledge speaks, but wisdom listens.</p>
-                                </div>
-                              </div>
-                            </div>
-                            <div class="act-time">
-                              <div class="activity-body act-in">
-                                <span class="arrow"></span>
-                                <div class="text">
-                                  <a href="#" class="activity-img"><img class="avatar" src="img/chat-avatar.jpg" alt=""></a>
-                                  <p class="attribution"><a href="#">Rose Crack</a> at 5:25am, 30th Octmber 2014</p>
-                                  <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
-                                  </p>
-                                </div>
-                              </div>
-                            </div>
-                            <div class="act-time">
-                              <div class="activity-body act-in">
-                                <span class="arrow"></span>
-                                <div class="text">
-                                  <a href="#" class="activity-img"><img class="avatar" src="img/chat-avatar.jpg" alt=""></a>
-                                  <p class="attribution"><a href="#">Jimy Smith</a> at 5:25am, 30th Octmber 2014</p>
-                                  <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
-                                    Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu
-                                    libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend
-                                    leo.
-                                  </p>
-                                </div>
-                              </div>
-                            </div>
-                            <div class="act-time">
-                              <div class="activity-body act-in">
-                                <span class="arrow"></span>
-                                <div class="text">
-                                  <a href="#" class="activity-img"><img class="avatar" src="img/chat-avatar.jpg" alt=""></a>
-                                  <p class="attribution"><a href="#">Maria Willyam</a> at 5:25am, 30th Octmber 2014</p>
-                                  <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
-                                    Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu
-                                    libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend
-                                    leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum
-                                    sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum,
-                                    eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar
-                                    facilisis. Ut felis. Praesent dapibus, neque id cursus faucibus, tortor neque egestas
-                                    augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt
-                                    quis, accumsan porttitor, facilisis luctus, metus</p>
-                                </div>
-                              </div>
-                            </div>
-                            <div class="act-time">
-                              <div class="activity-body act-in">
-                                <span class="arrow"></span>
-                                <div class="text">
-                                  <a href="#" class="activity-img"><img class="avatar" src="img/chat-avatar.jpg" alt=""></a>
-                                  <p class="attribution"><a href="#">Sarah saw</a> at 5:25am, 30th Octmber 2014</p>
-                                  <p>Knowledge speaks, but wisdom listens.</p>
-                                </div>
-                              </div>
-                            </div>
-                            <div class="act-time">
-                              <div class="activity-body act-in">
-                                <span class="arrow"></span>
-                                <div class="text">
-                                  <a href="#" class="activity-img"><img class="avatar" src="img/chat-avatar.jpg" alt=""></a>
-                                  <p class="attribution"><a href="#">Layla night</a> at 5:25am, 30th Octmber 2014</p>
-                                  <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
-                                  </p>
-                                </div>
-                              </div>
-                            </div>
-                            <div class="act-time">
-                              <div class="activity-body act-in">
-                                <span class="arrow"></span>
-                                <div class="text">
-                                  <a href="#" class="activity-img"><img class="avatar" src="img/chat-avatar.jpg" alt=""></a>
-                                  <p class="attribution"><a href="#">Andriana lee</a> at 5:25am, 30th Octmber 2014</p>
-                                  <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
-                                    Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu
-                                    libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend
-                                    leo.
-                                  </p>
-                                </div>
-                              </div>
-                            </div>
-                            <div class="act-time">
-                              <div class="activity-body act-in">
-                                <span class="arrow"></span>
-                                <div class="text">
-                                  <a href="#" class="activity-img"><img class="avatar" src="img/chat-avatar.jpg" alt=""></a>
-                                  <p class="attribution"><a href="#">Maria Willyam</a> at 5:25am, 30th Octmber 2014</p>
-                                  <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
-                                    Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu
-                                    libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend
-                                    leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum
-                                    sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum,
-                                    eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar
-                                    facilisis. Ut felis. Praesent dapibus, neque id cursus faucibus, tortor neque egestas
-                                    augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt
-                                    quis, accumsan porttitor, facilisis luctus, metus</p>
-                                </div>
-                              </div>
-                            </div>
 
+                                <div class="act-time">
+                                  <div class="activity-body act-in">
+                                    <span class="arrow"></span>
+                                    <div class="text">
+                                      <a href="#" class="activity-img"><img class="avatar" src="img/chat-avatar.jpg" alt=""></a>
+                                      <p class="attribution"><a href="#">Maria Willyam</a> at 5:25am, 30th Octmber 2014</p>
+                                      <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis
+                                        egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet,
+                                        ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est.
+                                        Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra.
+                                        Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean
+                                        fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus
+                                        lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut felis. Praesent
+                                        dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna
+                                        eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor,
+                                        facilisis luctus, metus</p>
+                                    </div>
+                                  </div>
+                                </div>
                           </div>
                         </div>
                         <!-- profile -->
                         <div id="profile" class="tab-pane">
                           <section class="panel">
                             <div class="bio-graph-heading">
-                              Hello I’m Jenifer Smith, a leading expert in interactive and creative design specializing in the mobile medium. My graduation
-                              from Massey University with a Bachelor of Design majoring in visual communication.
+                              <%= profile_desc %>
                             </div>
                             <div class="panel-body bio-graph-info">
                               <h1>Bio Graph</h1>
                               <hr>
                               <div class="row">
                                 <div class="bio-row">
-                                  <p><span>First Name </span>: Jenifer </p>
+                                  <p><span> Name: </span>
+                                    <%= profile_name %>
+                                  </p>
                                 </div>
                                 <div class="bio-row">
-                                  <p><span>Last Name </span>: Smith</p>
+                                  <p><span>Age:</span>
+                                    <%= profile_age %>
+                                  </p>
                                 </div>
                                 <div class="bio-row">
-                                  <p><span>Birthday</span>: 27 August 1987</p>
+                                  <p><span>Country: </span> United</p>
                                 </div>
                                 <div class="bio-row">
-                                  <p><span>Country </span>: United</p>
-                                </div>
-                                <div class="bio-row">
-                                  <p><span>Occupation </span>: UI Designer</p>
-                                </div>
-                                <div class="bio-row">
-                                  <p><span>Email </span>:jenifer@mailname.com</p>
-                                </div>
-                                <div class="bio-row">
-                                  <p><span>Mobile </span>: (+6283) 456 789</p>
-                                </div>
-                                <div class="bio-row">
-                                  <p><span>Phone </span>: (+021) 956 789123</p>
+                                  <p><span>Email: </span>
+                                    <%= user_email %>
+                                  </p>
                                 </div>
                               </div>
                             </div>
