--- a/src/views/page/ProfilePage.html
+++ b/src/views/page/ProfilePage.html
@@ -308,7 +308,6 @@
                       <div class="tab-content">
                         <div id="recent-activity" class="tab-pane active">
                           <div class="profile-activity">
-                            </br>
                             <div class="col-lg-12 portlets">
                               <div class="panel panel-default">
                                 <div class="panel-heading">
@@ -356,11 +355,10 @@
                                       </form>
                                     </div>
                                   </div>
-
                                 </div>
                               </div>
                             </div>
-                            <%{%>
+                            <% for(var i=0;i< 5; i++) {%>
                               <div class="act-time">
                                 <div class="activity-body act-in">
                                   <span class="arrow"></span>
@@ -372,42 +370,12 @@
                                       </a>
                                     </p>
                                     <p>
-                                     <%=  profile_name %> 
+                                      <%= posts[0].content  %>
                                     </p>
                                   </div>
                                 </div>
                               </div>
                               <% } %>
-                                <div class="act-time">
-                                  <div class="activity-body act-in">
-                                    <span class="arrow"></span>
-                                    <div class="text">
-                                      <a href="#" class="activity-img"><img class="avatar" src="img/chat-avatar.jpg" alt=""></a>
-                                      <p class="attribution"><a href="#">Jhon Loves </a> at 5:25am, 30th Octmber 2014</p>
-                                      <p>Knowledge speaks, but wisdom listens.</p>
-                                    </div>
-                                  </div>
-                                </div>
-
-                                <div class="act-time">
-                                  <div class="activity-body act-in">
-                                    <span class="arrow"></span>
-                                    <div class="text">
-                                      <a href="#" class="activity-img"><img class="avatar" src="img/chat-avatar.jpg" alt=""></a>
-                                      <p class="attribution"><a href="#">Maria Willyam</a> at 5:25am, 30th Octmber 2014</p>
-                                      <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis
-                                        egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet,
-                                        ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est.
-                                        Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra.
-                                        Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean
-                                        fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus
-                                        lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut felis. Praesent
-                                        dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna
-                                        eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor,
-                                        facilisis luctus, metus</p>
-                                    </div>
-                                  </div>
-                                </div>
                           </div>
                         </div>
                         <!-- profile -->
