--- a/src/views/create/CreateEventPage.html
+++ b/src/views/create/CreateEventPage.html
@@ -212,11 +212,11 @@
                       Event Page Form
                     </header>
                     <div class="panel-body">
-                      <form class="form-horizontal " method="get">
+                      <form method="POST" action="/createEv" class="form-horizontal " method="get">
                         <div class="form-group">
                           <label class="col-sm-2 control-label">Event Name</label>
                           <div class="col-sm-10">
-                            <input type="text" class="form-control">
+                            <input name="EName" type="text" class="form-control">
                           </div>
                         </div>
                         <div class="form-group">
@@ -228,25 +228,25 @@
                         <div class="form-group">
                           <label class="col-sm-2 control-label">Event Description</label>
                           <div class="col-sm-10">
-                            <input type="text" class="form-control">
+                            <input name="EDesc" type="text" class="form-control">
                           </div>
                         </div>
                         <div class="form-group">
-                          <label class="col-sm-2 control-label">Start Date </label>
+                          <label class="col-sm-2 control-label">Event Date </label>
                           <div class="col-sm-4">
-                            <input id="cp1" type="text" value="28-10-2013" size="16" class="form-control">
+                            <input name="EDate" id="cp1" type="text" value="28-10-2013" size="16" class="form-control">
                           </div>
                         </div>
                         <div class="form-group">
                           <label class="col-sm-2 control-label">Event Location</label>
                           <div class="col-sm-10">
-                            <input type="text" class="form-control">
+                            <input name="ELoc" type="text" class="form-control">
                           </div>
                         </div>
                         <div class="form-group">
                           <label class="col-sm-2 control-label">Invite Members</label>
                           <div class="col-sm-10">
-                            <input type="text" class="form-control" placeholder="Ex: Javier Colon, Victor Martinez">
+                            <input name="EMembers" type="text" class="form-control" placeholder="Ex: Javier Colon, Victor Martinez">
                           </div>
                         </div>
                         <div class="form-group">
