--- a/src/views/submit/SubmitIPA.html
+++ b/src/views/submit/SubmitIPA.html
@@ -61,7 +61,7 @@
 <body>
 
   <!-- Navigation -->
-  <nav ng-app="app" ng-controller="MainController" class="navbar navbar-inverse navbar-fixed-top" role="navigation" style="background-color: black;">
+  <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation" style="background-color: black;">
     <div class="row no-gutters ">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header ">
@@ -262,6 +262,7 @@
                       </div>
                   </div>
                   </form>
+
                   </section>
                 </div>
             </section>
